[project]
name = "tinder"
version = "0.1.0"
description = "Speed dating data analysis for Tinder"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "jupyter>=1.1.1",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = []

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
